Gnome-shell: Fix misaligned switch button(do not disturb)

--- a/gnome-shell/_common.scss
+++ b/gnome-shell/_common.scss
@@ -1101,12 +1101,6 @@ StScrollBar {
         }
       }
 
-        .message-list-clear-button.button {
-          @include button(normal);
-          &:hover,&:focus { @include button(hover); }
-          margin: 1.5em 1.5em 0;
-        }
-
         .message-list-sections {
           spacing: 1em;
         }
