--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -985,22 +985,6 @@ StScrollBar {
   .message-list .message-title, .message-list .message-content, .message-list .message-body {
     color: #cbd3e2; }
 
-.message-list-clear-button.button {
-  color: #d8dee9;
-  background-color: #2d3749;
-  box-shadow: none;
-  border: 1px solid #151921;
-  text-shadow: 0 1px black;
-  icon-shadow: 0 1px black;
-  border: 1px solid #151921;
-  margin: 1.5em 1.5em 0; }
-  .message-list-clear-button.button:hover, .message-list-clear-button.button:focus {
-    color: #fff;
-    background-color: rgba(205, 126, 191, 0.8);
-    border: 1px solid #151921;
-    text-shadow: 0 1px black;
-    icon-shadow: 0 1px black; }
-
 .message-list-sections {
   spacing: 1em; }
 
